MODREQMED-176 Remove unused method